--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,21 @@
 *{
     margin:0;
     padding:0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h1{
+    letter-spacing: .9rem;
+    color: #eee;
+}
+
+h2,h3,h4,h5{
+    letter-spacing: .4rem;
 }
 
 .nav{
     grid-area: nav;
-    background-color: blue;
+    background-color:rgb(0 30 60);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,27 +27,33 @@
     flex-direction: column;
     align-items: center;
     list-style-type: none;
-    gap:.5rem;
+    gap: 2rem;
     padding: 1rem;
+    margin-top:1rem;
     font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: .1rem;
 
 }
 
 .amount{
     color: #c1c1c1;
+    font-weight: 400;
+    letter-spacing: .1rem;
 }
 
 .aside{
 
     grid-area: aside;
-    background-color: yellow;
+
+
 
 }
 
 .main{
 
     grid-area: main;
-    background-color: red;
+ 
     height:100%;
     overflow: hidden;
 
@@ -48,11 +64,15 @@
     grid-template-columns: repeat(3, 1fr);
     height:100%;
     overflow: auto;
+
    
 }
 
 .main img{
     width: 100%;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 5px;
 
 }
 .card{
@@ -60,29 +80,142 @@
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    padding: .5rem;
+    padding: 1rem;
     text-align:center;
-    gap: .7rem;
+    gap: 1.5rem;
+    border: 1px solid #c1c1c1;
+    border-radius: 5px;
+    margin: .5rem;
+}
+
+.product-description{
+    color: #a1a1a1;
+    font-weight: 400;
+    letter-spacing: .3rem;
+}
+
+.product-button{
+    background-color:rgb(0 30 60);
+    border:none;
+    color:white;
+    padding: .6rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 3px;
 }
 
 .footer{
     grid-area: footer;
-    background-color: blue;
+    background-color:rgb(0 30 60);
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #eee;
+
 
 }
 
 
 .grid-container{
     display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: 10% 80% 10%;
+    grid-template-columns: 15% 85%;
+    grid-template-rows: 5% 90% 5%;
     height: 100vh;
     grid-template-areas: 
     'nav nav'
     'aside main'
     'footer footer';
+
+}
+
+
+
+
+
+
+@media (max-width: 1200px){
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: 20% 80%;
+        grid-template-rows: 5% 90% 5%;
+        height: 100vh;
+    
+        grid-template-areas: 
+        'nav nav'
+        'aside main'
+        'footer footer';
+    
+    }
+
+
+    .categories{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-end;
+        list-style-type: none;
+        gap:1rem;
+        padding: 1rem;
+        margin: .5rem;
+        font-size: 1.2rem;
+        font-weight: 600;
+        letter-spacing: .1rem;
+        flex-wrap: wrap;
+    
+    }
+
+ 
+
+    .main .gallery{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        height:100%;
+        overflow: auto; 
+    }
+
+}
+
+@media (max-width: 600px){
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 5% 14% 79% 5%;
+        height: 100vh;
+    
+        grid-template-areas: 
+        'nav'
+        'aside'
+        'main'
+        'footer';
+    
+    }
+
+
+    .categories{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-end;
+        list-style-type: none;
+        gap:1rem;
+        padding: 1rem;
+        margin: .5rem;
+        font-size: 1.2rem;
+        font-weight: 600;
+        letter-spacing: .1rem;
+        flex-wrap: wrap;
+    
+    }
+
+ 
+
+    .main .gallery{
+        display: grid;
+        grid-template-columns: 1fr;
+        height:100%;
+        overflow: auto; 
+    }
 
 }
