--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding:0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-family: "Roboto", sans-serif;
 }
 
 h1{
@@ -155,7 +155,7 @@ h2,h3,h4,h5{
         justify-content: space-evenly;
         align-items: flex-end;
         list-style-type: none;
-        gap:1rem;
+
         padding: 1rem;
         margin: .5rem;
         font-size: 1.2rem;
@@ -172,16 +172,35 @@ h2,h3,h4,h5{
         grid-template-columns: repeat(2, 1fr);
         height:100%;
         overflow: auto; 
+       
     }
 
 }
 
-@media (max-width: 600px){
+@media(max-width: 900px){
+
+    .grid-container{
+        grid-template-columns: 25% 75%;
+
+    }
+
+    .main .gallery{
+        display: grid;
+        grid-template-columns: 1fr;
+        height:100%;
+        overflow: auto; 
+    }
+}
+
+
+
+
+@media (max-width: 700px){
 
     .grid-container{
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 5% 14% 79% 5%;
+        grid-template-rows: 5% 12% 80% 5%;
         height: 100vh;
     
         grid-template-areas: 
@@ -192,6 +211,9 @@ h2,h3,h4,h5{
     
     }
 
+    .aside{
+        margin: 0 10%;
+    }
 
     .categories{
         display: flex;
@@ -199,9 +221,8 @@ h2,h3,h4,h5{
         justify-content: space-evenly;
         align-items: flex-end;
         list-style-type: none;
-        gap:1rem;
         padding: 1rem;
-        margin: .5rem;
+        margin: .7rem;
         font-size: 1.2rem;
         font-weight: 600;
         letter-spacing: .1rem;
@@ -217,5 +238,59 @@ h2,h3,h4,h5{
         height:100%;
         overflow: auto; 
     }
+
+}
+
+
+@media (max-width: 600px){
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 5% 12% 80% 5%;
+        height: 100vh;
+    
+        grid-template-areas: 
+        'nav'
+        'aside'
+        'main'
+        'footer';
+    
+    }
+
+    .aside{
+        margin: 0 1%;
+    
+
+    }
+
+
+
+
+}
+
+
+@media (max-width: 500px){
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 5% 18% 80% 5%;
+        height: 100vh;
+    
+        grid-template-areas: 
+        'nav'
+        'aside'
+        'main'
+        'footer';
+    
+    }
+
+    .aside{
+        margin: 0 5%;
+   
+
+    }
+
 
 }
