--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,17 @@ h2,h3,h4,h5{
     letter-spacing: .4rem;
 }
 
+a{
+    text-decoration: none;
+    transition: .2s ease-in-out;
+}
+
+a:hover{
+    opacity: .7;
+    filter:brightness(1.1);
+    font-size: 1.15rem;
+}
+
 .nav{
     grid-area: nav;
     background-color:rgb(0 30 60);
@@ -26,6 +37,7 @@ h2,h3,h4,h5{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     list-style-type: none;
     gap: 2rem;
     padding: 1rem;
@@ -35,6 +47,9 @@ h2,h3,h4,h5{
     letter-spacing: .1rem;
 
 }
+
+
+
 
 .amount{
     color: #c1c1c1;
@@ -102,6 +117,21 @@ h2,h3,h4,h5{
     font-size: 1rem;
     font-weight: 600;
     border-radius: 3px;
+    transition: .4s ease-in-out;
+}
+
+.product-button:hover{
+    background-color:rgb(0 30 90);
+    transform: scale(1.01);
+    color: #ddd;
+    cursor: pointer;
+
+}
+
+.product-button:active{
+    background-color:#52437a;
+    transition: none;
+    transform: scale(.99);
 }
 
 .footer{
@@ -115,10 +145,31 @@ h2,h3,h4,h5{
 
 }
 
+.footer a{
+    color: #eee;
+    text-decoration: none;
+    transition: .2s ease-in-out;
+}
+
+.footer a:hover{
+    color: #ddd;
+    opacity: .7;
+    filter:brightness(1.1);
+    font-size: 1.05rem;
+}
+
+.footer a:active{
+    color: #ddd;
+    opacity: .9;
+    filter:brightness(1.1);
+    font-size: 1.1rem;
+    transition: none;
+}
+
 
 .grid-container{
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 14% 86%;
     grid-template-rows: 5% 90% 5%;
     height: 100vh;
     grid-template-areas: 
