--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,366 +1,306 @@
-*{
-    margin:0;
-    padding:0;
-   font-family: "Roboto", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-h1{
-    letter-spacing: 1.9rem;
-    color: #eee;
+h1 {
+  letter-spacing: 1.9rem;
+  color: #eee;
 }
 
-i{
-    color:#ddd;
-    font-size: 1.6rem;
-    padding: 1.5rem;
-    margin-bottom: .3rem;
+i {
+  color: #ddd;
+  font-size: 1.6rem;
+  padding: 1.5rem;
+  margin-bottom: 0.3rem;
 }
 
-
-
-
-
-h2,h3,h4,h5{
-    letter-spacing: .4rem;
+h2,
+h3,
+h4,
+h5 {
+  letter-spacing: 0.4rem;
 }
 
-a{
-    text-decoration: none;
-    transition: .2s ease-in-out;
+a {
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
 }
 
-a:hover{
-    opacity: .7;
-    font-size: 1.15rem;
+a:hover {
+  opacity: 0.7;
+  font-size: 1.15rem;
 }
 
-.header{
-    grid-area: header;
-    background-color:rgb(0 30 60);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.header {
+  grid-area: header;
+  background-color: rgb(0, 30, 60);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.header a:hover{
-    opacity: .9;
-    font-size: 1rem;
+.header a:hover {
+  opacity: 0.9;
+  font-size: 1rem;
 }
 
-.categories{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    list-style-type: none;
-    gap: 2rem;
-    padding: 1rem;
-    margin-top:1rem;
-    font-size: 1.2rem;
-    font-weight: 600;
-    letter-spacing: .1rem;
-
+.categories {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  list-style-type: none;
+  gap: 2rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
 }
 
-
-
-
-.amount{
-    color: #c1c1c1;
-    font-weight: 400;
-    letter-spacing: .1rem;
+.amount {
+  color: #c1c1c1;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
 }
 
-.aside{
+.aside {
     background-color: #ebebeb;
     grid-area: aside;
-
-
-
+    color: rgb(0, 30, 60);
 }
 
-.main{
-
-    grid-area: main;
-    background-color: #ebebeb;
-    height:100%;
-    overflow: hidden;
-
+.main {
+  grid-area: main;
+  background-color: #ebebeb;
+  height: 100%;
+  overflow: hidden;
 }
 
-.main .gallery{
+.main .gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  height: 100%;
+  overflow: auto;
+}
+
+.main img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  padding: 1rem;
+  text-align: center;
+  gap: 1.5rem;
+
+  border-radius: 5px;
+  margin: 0.5rem;
+  background-color: #ffffff9a;
+}
+
+.product-description {
+  color: #a1a1a1;
+  font-weight: 400;
+  letter-spacing: 0.3rem;
+}
+
+.product-button {
+  background-color: rgb(0, 30, 60);
+  border: none;
+  color: white;
+  padding: 0.6rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 3px;
+  transition: 0.4s ease-in-out;
+}
+
+.product-button:hover {
+  background-color: rgb(0, 30, 90);
+  transform: scale(1.01);
+  color: #ddd;
+  cursor: pointer;
+}
+
+.product-button:active {
+  background-color: #52437a;
+  transition: none;
+  transform: scale(0.99);
+}
+
+.footer {
+  grid-area: footer;
+  background-color: rgb(0, 30, 60);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #eee;
+}
+
+.footer a {
+  color: #eee;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+}
+
+.footer a:hover {
+  color: #ddd;
+  opacity: 0.7;
+  filter: brightness(1.1);
+  font-size: 1.05rem;
+}
+
+.footer a:active {
+  color: #ddd;
+  opacity: 0.9;
+  filter: brightness(1.1);
+  font-size: 1.1rem;
+  transition: none;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 14% 86%;
+  grid-template-rows: 5% 90% 5%;
+  height: 100vh;
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
+}
+
+@media (max-width: 1200px) {
+  .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    height:100%;
-    overflow: auto;
-
-   
-}
-
-.main img{
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-    border-radius: 5px;
-
-}
-.card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: stretch;
-    padding: 1rem;
-    text-align:center;
-    gap: 1.5rem;
-  
-    border-radius: 5px;
-    margin: .5rem;
-    background-color: #ffffff9a;
-}
-
-.product-description{
-    color: #a1a1a1;
-    font-weight: 400;
-    letter-spacing: .3rem;
-}
-
-.product-button{
-    background-color:rgb(0 30 60);
-    border:none;
-    color:white;
-    padding: .6rem;
-    font-size: 1rem;
-    font-weight: 600;
-    border-radius: 3px;
-    transition: .4s ease-in-out;
-}
-
-.product-button:hover{
-    background-color:rgb(0 30 90);
-    transform: scale(1.01);
-    color: #ddd;
-    cursor: pointer;
-
-}
-
-.product-button:active{
-    background-color:#52437a;
-    transition: none;
-    transform: scale(.99);
-}
-
-.footer{
-    grid-area: footer;
-    background-color:rgb(0 30 60);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #eee;
-
-
-}
-
-.footer a{
-    color: #eee;
-    text-decoration: none;
-    transition: .2s ease-in-out;
-}
-
-.footer a:hover{
-    color: #ddd;
-    opacity: .7;
-    filter:brightness(1.1);
-    font-size: 1.05rem;
-}
-
-.footer a:active{
-    color: #ddd;
-    opacity: .9;
-    filter:brightness(1.1);
-    font-size: 1.1rem;
-    transition: none;
-}
-
-
-.grid-container{
-    display: grid;
-    grid-template-columns: 14% 86%;
+    grid-template-columns: 20% 80%;
     grid-template-rows: 5% 90% 5%;
     height: 100vh;
-    grid-template-areas: 
-    'header header'
-    'aside main'
-    'footer footer';
 
+    grid-template-areas:
+      "header header"
+      "aside main"
+      "footer footer";
+  }
+
+  .categories {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    list-style-type: none;
+
+    padding: 1rem;
+    margin: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    flex-wrap: wrap;
+  }
+
+  .main .gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+    overflow: auto;
+  }
 }
 
+@media (max-width: 900px) {
+  .grid-container {
+    grid-template-columns: 25% 75%;
+  }
 
-
-
-
-
-@media (max-width: 1200px){
-
-
-    
-
-    .grid-container{
-        display: grid;
-        grid-template-columns: 20% 80%;
-        grid-template-rows: 5% 90% 5%;
-        height: 100vh;
-    
-        grid-template-areas: 
-        'header header'
-        'aside main'
-        'footer footer';
-    
-    }
-
-
-    .categories{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: flex-end;
-        list-style-type: none;
-
-        padding: 1rem;
-        margin: .5rem;
-        font-size: 1.2rem;
-        font-weight: 600;
-        letter-spacing: .1rem;
-        flex-wrap: wrap;
-    
-    }
-
- 
-
-    .main .gallery{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        height:100%;
-        overflow: auto; 
-       
-    }
-
+  .main .gallery {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100%;
+    overflow: auto;
+  }
 }
 
-@media(max-width: 900px){
+@media (max-width: 700px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 5% 12% 80% 5%;
+    height: 100vh;
 
-    .grid-container{
-        grid-template-columns: 25% 75%;
+    grid-template-areas:
+      "header"
+      "aside"
+      "main"
+      "footer";
+  }
 
-    }
+  .aside {
+    margin: 0 10%;
+  }
 
-    .main .gallery{
-        display: grid;
-        grid-template-columns: 1fr;
-        height:100%;
-        overflow: auto; 
-    }
+  .categories {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    list-style-type: none;
+    padding: 1rem;
+    margin: 0.7rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    flex-wrap: wrap;
+  }
+
+  .main .gallery {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100%;
+    overflow: auto;
+  }
 }
 
+@media (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 5% 12% 80% 5%;
+    height: 100vh;
 
+    grid-template-areas:
+      "header"
+      "aside"
+      "main"
+      "footer";
+  }
 
-
-@media (max-width: 700px){
-
-    .grid-container{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 5% 12% 80% 5%;
-        height: 100vh;
-    
-        grid-template-areas: 
-        'header'
-        'aside'
-        'main'
-        'footer';
-    
-    }
-
-    .aside{
-        margin: 0 10%;
-    }
-
-    .categories{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: flex-end;
-        list-style-type: none;
-        padding: 1rem;
-        margin: .7rem;
-        font-size: 1.2rem;
-        font-weight: 600;
-        letter-spacing: .1rem;
-        flex-wrap: wrap;
-    
-    }
-
- 
-
-    .main .gallery{
-        display: grid;
-        grid-template-columns: 1fr;
-        height:100%;
-        overflow: auto; 
-    }
-
+  .aside {
+    margin: 0 1%;
+  }
 }
 
+@media (max-width: 500px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 5% 18% 80% 5%;
+    height: 100vh;
 
-@media (max-width: 600px){
+    grid-template-areas:
+      "header"
+      "aside"
+      "main"
+      "footer";
+  }
 
-    .grid-container{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 5% 12% 80% 5%;
-        height: 100vh;
-    
-        grid-template-areas: 
-        'header'
-        'aside'
-        'main'
-        'footer';
-    
-    }
-
-    .aside{
-        margin: 0 1%;
-    
-
-    }
-
-
-
-
-}
-
-
-@media (max-width: 500px){
-
-    .grid-container{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 5% 18% 80% 5%;
-        height: 100vh;
-    
-        grid-template-areas: 
-        'header'
-        'aside'
-        'main'
-        'footer';
-    
-    }
-
-    .aside{
-        margin: 0 5%;
-   
-
-    }
-
-
+  .aside {
+    margin: 0 5%;
+  }
 }
