FEAT: cambio de color categories

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,11 @@ a:hover {
   font-size: 1.2rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
+ 
+}
+
+.categories li a{
+     color: #333;
 }
 
 .amount {
