--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,13 +24,13 @@ h5 {
 }
 
 a {
-  text-decoration: none;
-  transition: 0.2s ease-in-out;
+    text-decoration: none;
+    color: #333;
+    transition: 0.2s ease-in-out;
 }
 
 a:hover {
   opacity: 0.7;
-  font-size: 1.15rem;
 }
 
 .header {
@@ -44,7 +44,6 @@ a:hover {
 
 .header a:hover {
   opacity: 0.9;
-  font-size: 1rem;
 }
 
 .categories {
@@ -62,7 +61,7 @@ a:hover {
  
 }
 
-.categories li a{
+.categories li{
      color: #333;
 }
 
