--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,13 +24,22 @@ h5 {
 }
 
 a {
-    text-decoration: none;
-    color: #333;
-    transition: 0.2s ease-in-out;
+  text-decoration: none;
+  color: #333;
+  transition: 0.2s ease-in-out;
 }
 
 a:hover {
   opacity: 0.7;
+  color: #333;
+}
+
+a:active{
+    color: #333;
+}
+
+a:visited{
+    color:pink;
 }
 
 .header {
@@ -58,11 +67,10 @@ a:hover {
   font-size: 1.2rem;
   font-weight: 600;
   letter-spacing: 0.1rem;
- 
 }
 
-.categories li{
-     color: #333;
+.categories li {
+  color: #333;
 }
 
 .amount {
@@ -75,6 +83,7 @@ a:hover {
   background-color: #ebebeb;
   grid-area: aside;
   color: rgb(0, 30, 60);
+  color: #333;
 }
 
 .main {
@@ -309,14 +318,14 @@ a:hover {
   }
 }
 
-@media only screen and (max-width: 425px){
+@media only screen and (max-width: 425px) {
   .grid-container {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 7% 18% 70% 5%;
     min-height: 100vh;
-    min-width:100vw;
-     overflow-x: hidden;
+    min-width: 100vw;
+    overflow-x: hidden;
 
     grid-template-areas:
       "header"
@@ -325,18 +334,15 @@ a:hover {
       "footer";
   }
 
-  .header h1, i{
-    font-size: 1.2rem
+  .header h1,
+  i {
+    font-size: 1.2rem;
   }
 
-  .aside{
+  .aside {
     margin: 0;
   }
-  .categories{
-    font-size: .8rem;
-
+  .categories {
+    font-size: 0.8rem;
   }
- 
-
-
 }
