cambio de .header por .navbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,8 +39,8 @@ a:active{
 
 
 
-.header {
-  grid-area: header;
+.navbar {
+  grid-area: nav;
   background-color: rgb(0, 30, 60);
   display: flex;
   justify-content: center;
@@ -48,7 +48,7 @@ a:active{
   text-align: center;
 }
 
-.header a:hover {
+.navbar a:hover {
   opacity: 0.9;
 }
 
@@ -179,7 +179,7 @@ a:active{
   grid-template-rows: 5% 90% 5%;
   height: 100vh;
   grid-template-areas:
-    "header header"
+    "nav nav"
     "aside main"
     "footer footer";
 }
@@ -192,7 +192,7 @@ a:active{
     height: 100vh;
 
     grid-template-areas:
-      "header header"
+      "nav nav"
       "aside main"
       "footer footer";
   }
@@ -241,7 +241,7 @@ a:active{
     height: 100vh;
 
     grid-template-areas:
-      "header"
+      "nav"
       "aside"
       "main"
       "footer";
@@ -281,7 +281,7 @@ a:active{
     height: 100vh;
 
     grid-template-areas:
-      "header"
+      "nav"
       "aside"
       "main"
       "footer";
@@ -300,7 +300,7 @@ a:active{
     height: 100vh;
 
     grid-template-areas:
-      "header"
+      "nav"
       "aside"
       "main"
       "footer";
@@ -321,13 +321,13 @@ a:active{
     overflow-x: hidden;
 
     grid-template-areas:
-      "header"
+      "nav"
       "aside"
       "main"
       "footer";
   }
 
-  .header h1,
+  .navbar h1,
   i {
     font-size: 1.2rem;
   }
