--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,14 +3,13 @@
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
-/*global*/
+/*global style----------------------------------------------------------------*/
 h1 {
   letter-spacing: 1.9rem;
   color: #eee;
 }
 
-h3
-{
+h3 {
   letter-spacing: 0.4rem;
 }
 
@@ -31,8 +30,8 @@ a:hover {
   opacity: 0.7;
 }
 
-a:active{
-    color: #bbb;
+a:active {
+  color: #bbb;
 }
 /*LAYOUT-----------------------------------------------------------------*/
 /*General*/
@@ -236,6 +235,8 @@ a:active{
     overflow: auto;
   }
 }
+
+/*-----------------------------------------------------------------------------------*/
 
 @media (max-width: 700px) {
   .grid-container {
