--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -252,9 +252,7 @@ a:active {
       "footer";
   }
 
-  .aside {
-    margin: 0 10%;
-  }
+
 
   .categories {
     display: flex;
@@ -262,8 +260,8 @@ a:active {
     justify-content: space-evenly;
     align-items: flex-end;
     list-style-type: none;
-    padding: 1rem;
-    margin: 0.7rem;
+    padding: 1.2rem;
+    margin: 0 4rem;
     font-size: 1.2rem;
     font-weight: 600;
     letter-spacing: 0.1rem;
@@ -294,9 +292,10 @@ a:active {
       "footer";
   }
 
-  .aside {
-    margin: 0 1%;
+  .categories{
+    margin: 0 1.4rem;
   }
+
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -315,9 +314,10 @@ a:active {
       "footer";
   }
 
-  .aside {
-    margin: 0 1%;
-  }
+.categories{
+  margin: .6rem 0;
+}
+
 }
 
 /*-----------------------------------------------------------------------------------*/
