--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,24 +1,19 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+}
+
+html{
+   font-family: "Roboto", sans-serif;
 }
 /*global style----------------------------------------------------------------*/
-h1 {
-  letter-spacing: 1.9rem;
-  color: #eee;
-}
+
 
 h3 {
   letter-spacing: 0.4rem;
 }
 
-i {
-  color: #ddd;
-  font-size: 1.6rem;
-  padding: 1.5rem;
-  margin-bottom: 0.3rem;
-}
+
 
 a {
   text-decoration: none;
@@ -41,19 +36,31 @@ a:active {
   grid-template-rows: 5% 90% 5%;
   height: 100vh;
   grid-template-areas:
-    "nav nav"
+    "navbar navbar"
     "aside main"
     "footer footer";
 }
 
 /*Navbar*/
 .navbar {
-  grid-area: nav;
+  grid-area: navbar;
   background-color: rgb(0, 30, 60);
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.navbar h1 {
+  letter-spacing: 1.9rem;
+  color: #eee;
+}
+
+.navbar i {
+  color: #ddd;
+  font-size: 1.6rem;
+  padding: 1.5rem;
+  margin-bottom: 0.3rem;
 }
 
 .navbar a:hover {
@@ -187,13 +194,12 @@ a:active {
 
 @media (max-width: 1200px) {
   .grid-container {
-    display: grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: 5% 90% 5%;
     height: 100vh;
 
     grid-template-areas:
-      "nav nav"
+      "navbar navbar"
       "aside main"
       "footer footer";
   }
@@ -240,19 +246,16 @@ a:active {
 
 @media (max-width: 700px) {
   .grid-container {
-    display: grid;
     grid-template-columns: auto;
     grid-template-rows: 5% 12% 80% 5%;
     height: 100vh;
 
     grid-template-areas:
-      "nav"
+      "navbar"
       "aside"
       "main"
       "footer";
   }
-
-
 
   .categories {
     display: flex;
@@ -280,59 +283,54 @@ a:active {
 
 @media (max-width: 600px) {
   .grid-container {
-    display: grid;
     grid-template-columns: auto;
     grid-template-rows: 5% 12% 80% 5%;
     height: 100vh;
 
     grid-template-areas:
-      "nav"
+      "navbar"
       "aside"
       "main"
       "footer";
   }
 
-  .categories{
+  .categories {
     margin: 0 1.4rem;
   }
-
 }
 
 /*-----------------------------------------------------------------------------------*/
 
 @media (max-width: 500px) {
   .grid-container {
-    display: grid;
     grid-template-columns: auto;
     grid-template-rows: 5% 14% 76% 5%;
     height: 100vh;
 
     grid-template-areas:
-      "nav"
+      "navbar"
       "aside"
       "main"
       "footer";
   }
 
-.categories{
-  margin: .6rem 0;
-}
-
+  .categories {
+    margin: 0.6rem 0;
+  }
 }
 
 /*-----------------------------------------------------------------------------------*/
 
 @media only screen and (max-width: 425px) {
   .grid-container {
-    display: grid;
-    grid-template-columns: 100%;
+    grid-template-columns: auto;
     grid-template-rows: 7% 18% 70% 5%;
-    min-height: 100vh;
+    min-height: 100dvh;
     min-width: 100vw;
     overflow-x: hidden;
 
     grid-template-areas:
-      "nav"
+      "navbar"
       "aside"
       "main"
       "footer";
